Added profile image and meta data

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/src/assets/profileImg.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pratik's Portfolio - Showcasing my work and skills."/>
+    <meta name="author" content="Pratik Jadhav" />
+    <meta name="keywords" content="portfolio, web development, projects, skills, react" />
     <link rel="stylesheet" href="index.css">
     <title>Pratik's Portfolio</title>
   </head>
