--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/src/assets/profileImg.jpg" />
+    <link rel="icon" type="image" href="/src/assets/profileImg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pratik's Portfolio - Showcasing my work and skills."/>
     <meta name="author" content="Pratik Jadhav" />
